--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     };
 
     var myMSALObj = new Msal.UserAgentApplication(msalConfig);
-    var filedId = 955797544960; //for YammerFileAPI. 
+    var filedId = 997921701888; //for YammerFileAPI. 
     var groupId = 59935252480; //could be populated through users endpoint
     var messageId = 1195297106616320;
+    var versionId = 1014137659392;
 
     // Register Callbacks for redirect flow
     //myMSALObj.handleRedirectCallbacks(acquireTokenRedirectCallBack, acquireTokenErrorRedirectCallBack);
@@ -66,7 +67,7 @@
             callYammerAPI(yammerConfig.yammerUrl, tokenResponse.accessToken, "users.json");
             callYammerAPI(yammerConfig.yammerUrl, tokenResponse.accessToken, "users/in_group/"+groupId+".json");
             callYammerAPI(yammerConfig.yammerUrl, tokenResponse.accessToken, "users/liked_message/"+messageId+".json");
-            callYammerAPI(yammerConfig.yammerUrl, tokenResponse.accessToken, "uploaded_files/"+fileID+"large_preview")
+            callYammerAPI(yammerConfig.yammerUrl, tokenResponse.accessToken, "uploaded_files/"+fileID+"/version/"+versionID+"/preview")
         }).catch(function (error) {
             console.log(error);
             // Upon acquireTokenSilent failure (due to consent or interaction or login required ONLY)
