--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         .then(function(data) {
             // data is your response. 
             console.log(data); //response
+            alert("data");
             document.getElementById('json').innerHTML = document.getElementById('json').innerHTML + endpoint + " succeded.\n"
         }).catch(function(err){
             document.getElementById('json').innerHTML = document.getElementById('json').innerHTML + endpoint + " returned error.\n"
